<resources>
    <string name="app_name">PumpIt</string>
    <string name="title_activity_hight">HightActivity</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email id to send you password reset instructions.</string>
    <string name="hint_email">Email</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="btn_back">back</string>
    <string name="Search">Search...</string>
    <string name="foodName">Food name</string>
    <string name="general_fitness">General Fitness</string>
    <string name="bulking">Bulking</string>
    <string name="cutting">Cutting</string>
    <string name="sport_specific">Sport Specific</string>
    <string name="calories">Calories</string>
    <string name="calcium">Calcium</string>
    <string name="protein">Protein</string>
    <string name="servingQty">Serving Quantity</string>
    <string name="servingUnit">Unit</string>
    <string name="go">Go</string>
    <string name="no_data_found">No data found!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="list_preference_level">
        <item>General Fitness</item>
        <item>Bulking</item>
        <item>Cutting</item>
        <item>Sport Specific</item>
    </string-array>
    <string-array name="list_preference_day_type">
        <item>Day of Week</item>
        <item>Numerical</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="account_settings">Account Settings</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="details">DETAILS</string>
    <string name="carb">Carb</string>
    <string name="fat">Fat</string>
    <string name="goal">Goal:</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="city">City</string>
    <string name="my_goals">My Goals</string>
    <string name="title_activity_log_tab">LogTabActivity</string>
    <string name="sun">S</string>
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thu">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="account">Account</string>
    <string name="my_goal">My Goal</string>
    <string name="diary">Diary</string>
    <string name="water_tracker">Water Tracker</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="units">Units</string>
    <string name="data_export">Data Export</string>
    <string name="help_faq">Help &amp; FAQ</string>
    <string name="about_pumpit">About PumpIt</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log Out</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="key_email_address">email address</string>
</resources>