<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:id="@+id/layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_food_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="@dimen/common_8"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_food_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/foodName"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_calories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/calories"
                    android:textColor="@color/background"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_protin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Protine"
                    android:textColor="@color/background" />

                <TextView
                    android:id="@+id/tv_service_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/servingQty"
                    android:textColor="@color/background" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>